--- a/content/E2.md
+++ b/content/E2.md
@@ -19,3 +19,4 @@ another hard time getting out of bed, and same on the naps
 day 3: 
 a third rough time getting out of bed. im waking up with my alarm but its not getting me up and out of bed. i think i need a new strategy. will try phone across the room tomorrow night. 
 
+NOTE: This project is on pause. i got sick with food poisoning and crashed and burned out of the schedule. id been oversleeping and started undersleeping, and it was a whole mess. in rrecovery now, may return to this project later
